--- a/src/locales/en-US/header/default.json
+++ b/src/locales/en-US/header/default.json
@@ -3,5 +3,6 @@
     "introduce": "Introduce",
     "blog": "Blog",
     "contact": "Contact",
-    "login": "Log In"
+    "login": "Log In",
+    "contactWithMe": "Contact With Me"
 }
