--- a/src/locales/vi-VN/header/default.json
+++ b/src/locales/vi-VN/header/default.json
@@ -3,5 +3,6 @@
     "introduce": "Giới Thiệu",
     "blog": "Blog",
     "contact": "Liên Hệ",
-    "login": "Đăng nhập"
+    "login": "Đăng nhập",
+    "contactWithMe": "Liên hệ với tôi"
 }
